--- a/.github/actions/doc-build/action.yml
+++ b/.github/actions/doc-build/action.yml
@@ -84,8 +84,7 @@ runs:
     - name: "Install OS packages"
       shell: bash
       run: |
-        sudo apt update 
-        sudo apt install zip pandoc libgl1-mesa-glx xvfb texlive-latex-extra latexmk graphviz texlive-xetex texlive-fonts-extra qpdf xindy
+        sudo apt update && sudo apt install zip pandoc libgl1-mesa-glx xvfb texlive-latex-extra latexmk graphviz texlive-xetex texlive-fonts-extra qpdf xindy
 
     - name: "Test virtual framebuffer"
       shell: bash
