fix: update CI workflow to use 'username' instead of 'actor' and adjust mapdl-version syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,9 +180,9 @@ jobs:
       license-server: ${{ secrets.LICENSE_SERVER }}
       codecov-token: ${{ secrets.CODECOV_TOKEN }}
       password: ${{ secrets.GITHUB_TOKEN }}
-      actor: ${{ github.actor }}
+      username: ${{ github.actor }}
     with:
-      mapdl-version: ${{ matrix.mapdl-version }}
+      mapdl-version: "${{ matrix.mapdl-version }}"
       file-name: "${{ matrix.mapdl-version }}-remote"
 
   build-test-local-matrix:
