--- a/.github/workflows/test-remote.yml
+++ b/.github/workflows/test-remote.yml
@@ -57,6 +57,9 @@ jobs:
       MAIN_PYTHON_VERSION: '3.12'
 
     steps:
+      - name: "Install Git and checkout project"
+        uses: actions/checkout@v4.2.2
+
       - name: "Login in Github container registry"
         uses: docker/login-action@v3.3.0
         with:
