--- a/.github/workflows/test-local.yml
+++ b/.github/workflows/test-local.yml
@@ -76,6 +76,7 @@ jobs:
       MAIN_PYTHON_VERSION: "3.12"
       P_SCHEMA: "/ansys_inc/v241/ansys/ac4/schema"
       PYTEST_TIMEOUT: 120 # seconds. Limit the duration for each unit test
+      PYTEST_ARGUMENTS: '-vvv -rxXsa --color=yes --durations=30 --random-order --random-order-bucket=class --maxfail=10 --reruns 3 --reruns-delay 4 --cov=ansys.mapdl.core --cov-report=html --timeout=180 --profile-svg --profile'
 
     container:
       image: ghcr.io/ansys/mapdl:${{ inputs.mapdl-version }}
