fix: update password secret reference in test-local workflow

--- a/.github/workflows/test-local.yml
+++ b/.github/workflows/test-local.yml
@@ -83,7 +83,7 @@ jobs:
       options: -u=0:0 --oom-kill-disable --memory=6656MB --memory-swap=16896MB --shm-size=1gb --entrypoint /bin/bash
       credentials:
         username: ${{ secrets.actor }}
-        password: ${{ secrets.github-token }}
+        password: ${{ secrets.token }}
 
     steps:
       - name: "Install Git and checkout project"
